--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,18 @@ a {
 /* Main */
 
 .main-section {
-  padding: 30px 0;
+}
+
+.wave {
+  width: 100%;
+  height: 200px;
+  background-image: url("../img/wave.svg");
+  background-color: white;
+  background-size: contain;
 }
 
 .main-section:nth-child(2n) {
-  background-color: gray;
+  background-color: #f6f6f6;
 }
 
 .item-main {
