--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,16 @@ a {
 .container {
   margin: 0 auto;
   display: flex;
-  width: 900px;
+  width: 1100px;
 }
 
 .text-container {
   margin: 0 auto;
   flex-direction: column;
+}
+
+.image-container {
+  width: fit-content;
 }
 
 .item-group {
@@ -86,17 +90,28 @@ a {
 /* Main */
 
 .main-section {
+  padding-bottom: 30px;
+}
+.main-section:first-child {
+  padding: 30px 0;
 }
 
 .wave {
   width: 100%;
   height: 200px;
   background-image: url("../img/wave.svg");
-  background-color: white;
   background-size: contain;
 }
 
-.main-section:nth-child(2n) {
+.main-section:nth-child(odd) {
+  background-color: #f6f6f6;
+}
+
+.main-section:nth-child(odd) > .wave {
+  background-color: white;
+}
+
+.main-section:nth-child(even) > .wave {
   background-color: #f6f6f6;
 }
 
@@ -107,28 +122,26 @@ a {
   padding: 250px 0;
 }
 
-.main-section > .text-container {
-  flex-direction: column;
-  color: white;
-  line-height: 1.8;
-  text-align: center;
+.main-section > .container {
+  align-items: flex-start;
 }
 
 .main-section > .container > .text-container {
   flex: 1;
-  align-content: center;
 }
 
 .main-section > .container > .text-container > h1 {
   font-size: 2.5rem;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 .main-section > .container > .text-container > p {
   line-height: 1.5;
   margin: 10px 0;
+  font-size: 1.2rem;
+  margin: 20px 0;
 }
 
-.main-section > .container > .item-main {
+.main-section > .container > .image-container {
   flex: 2;
 }
 
