--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ a {
 .container {
   margin: 0 auto;
   display: flex;
-  width: 1100px;
+  width: 1000px;
 }
 
 .text-container {
@@ -98,7 +98,7 @@ a {
 
 .wave {
   width: 100%;
-  height: 200px;
+  height: 160px;
   background-image: url("../img/wave.svg");
   background-size: contain;
 }
@@ -115,15 +115,18 @@ a {
   background-color: #f6f6f6;
 }
 
-.item-main {
-  font-weight: bold;
-  border: 2px dashed black;
-  width: 100%;
-  padding: 250px 0;
+.main-section:last-child > .container {
+  flex-direction: column;
+  align-items: center;
 }
 
-.main-section > .container {
-  align-items: flex-start;
+.main-section:last-child > .container > .text-container {
+  text-align: center;
+  width: fit-content;
+}
+
+.main-section:last-child > .container > .image-container {
+  width: 100%;
 }
 
 .main-section > .container > .text-container {
@@ -132,23 +135,17 @@ a {
 
 .main-section > .container > .text-container > h1 {
   font-size: 2.5rem;
-  margin: 20px 0;
+  margin: 20px;
 }
 .main-section > .container > .text-container > p {
   line-height: 1.5;
   margin: 10px 0;
   font-size: 1.2rem;
-  margin: 20px 0;
 }
 
 .main-section > .container > .image-container {
   flex: 2;
 }
-
-.main-section > .container > .green {
-  padding: 350px 0;
-}
-
 /* Footer section */
 .footer-section {
   background-color: rgb(29, 29, 29);
