--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,12 @@ a {
 }
 
 .text-container {
-  margin: 0 auto;
   flex-direction: column;
+  display: flex;
 }
 
 .image-container {
-  width: fit-content;
+  display: flex;
 }
 
 .item-group {
@@ -33,6 +33,7 @@ a {
 .badge {
   border-radius: 20px;
   padding: 10px 20px;
+  font-weight: 500;
   width: fit-content;
 }
 
@@ -68,6 +69,7 @@ a {
 .bottom-header > .text-container {
   color: white;
   line-height: 1.8;
+  font-weight: 500;
   text-align: center;
 }
 
@@ -120,26 +122,17 @@ a {
   align-items: center;
 }
 
-.main-section:last-child > .container > .text-container {
-  text-align: center;
-  width: fit-content;
-}
-
-.main-section:last-child > .container > .image-container {
-  width: 100%;
-}
-
 .main-section > .container > .text-container {
   flex: 1;
 }
 
 .main-section > .container > .text-container > h1 {
   font-size: 2.5rem;
-  margin: 20px;
+  margin: 20px 0;
+  text-align: left;
 }
 .main-section > .container > .text-container > p {
   line-height: 1.5;
-  margin: 10px 0;
   font-size: 1.2rem;
 }
 
@@ -177,6 +170,13 @@ a {
   display: flex;
 }
 
+.footer-section > .image-container {
+  justify-content: space-between;
+  width: 1000px;
+  padding-bottom: 20px;
+  margin: 0 auto;
+}
+
 .footer-section > .container {
   padding: 50px 0;
 }
@@ -184,12 +184,6 @@ a {
 .footer-section > .container > .container {
   flex: 1.5;
   flex-direction: column;
-}
-
-.footer-section > .container > .container > .image-container {
-  /* Ho scaricato immagini nere dimenticandomi lo sfondo fosse nero, questo è un modo rapido per rimediare senza riscaricare le immagini */
-  filter: invert(97%);
-  margin-top: 5px;
 }
 
 .footer-section > .container > .container > h1 {
@@ -214,31 +208,15 @@ a {
   background-color: white;
   margin: 20px auto;
 }
+
+.footer-section > .container > .container > .image-container {
+  /* Ho scaricato immagini nere dimenticandomi lo sfondo fosse nero, questo è un modo rapido per rimediare senza riscaricare le immagini */
+  filter: invert(97%);
+  margin-top: 5px;
+}
+
 /* SPAM */
 
-.blue {
-  background-color: skyblue;
-}
-
-.pink {
-  background-color: pink;
-}
-
-.green {
-  background-color: green;
-}
-
-.light-red {
-  background-color: lightcoral;
-}
-
-.cyan {
-  background-color: cyan;
-}
-
-.brown {
-  background-color: brown;
-}
 .blacktxt-whitebg {
   color: black;
   background-color: white;
